--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ license = "MIT"
 readme="README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
+exp4 = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
