--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,12 @@ readme="README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 exp4 = "^0.1.3"
+attr = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
+pytest-flake8 = "^1.0.7"
+pytest = "^6.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
