--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme="README.md"
 python = "^3.10"
 exp4 = "^0.1.3"
 attr = "^0.3.1"
+funcy = "^1.16"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
