--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 exp4 = "^0.1.3"
 attr = "^0.3.1"
 funcy = "^1.16"
+hasse = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
