--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ exp4 = "^0.1.3"
 attr = "^0.3.1"
 funcy = "^1.16"
 hasse = "^0.1.2"
+matplotlib = "^3.4.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
