--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mypy = "^0.910"
 pytest-flake8 = "^1.0.7"
 pytest = "^6.2.4"
 dfa-identify = {git = "https://github.com/mvcisback/dfa-identify", rev = "preferences"}
+matplotlib = "^3.4.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
