--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "memreps"
 version = "0.1.0"
 description = "Algorithm for learning from comparision and membership queries."
-authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
+authors = ["anonymous"]
 license = "MIT"
 readme="README.md"
 
@@ -12,6 +12,7 @@ exp4 = "^0.1.3"
 attr = "^0.3.1"
 funcy = "^1.16"
 hasse = "^0.1.2"
+dfa = "4.2.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
